--- a/rpi-drop/html/airmon-ng.html
+++ b/rpi-drop/html/airmon-ng.html
@@ -46,7 +46,7 @@
 
 </script>
 
-<div class="row-box-closed">
+<div class="row-box-closed" id="airmon-ng-row">
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
         airmon-ng
@@ -57,7 +57,7 @@
 
 </div>
 
-<div class="row-box-closed">
+<div class="row-box-closed" id="airodump-ng-row">
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
         airodump-ng
@@ -69,7 +69,7 @@
 </div>
 
 <!-- ====================================================================== -->
-<div class="row-box-closed">
+<div class="row-box-closed" id="airmon-ng-console-row">
 
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
