--- a/rpi-drop/html/mdk3.html
+++ b/rpi-drop/html/mdk3.html
@@ -26,7 +26,7 @@
 </script>
 
 <!-- ====================================================================== -->
-<div class="row-box">
+<div class="row-box" id="mdk3-row">
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
         MDK-3
@@ -38,7 +38,7 @@
 </div>
 
 <!-- ====================================================================== -->
-<div class="row-box-closed">
+<div class="row-box-closed" id="mdk3-console-row">
 
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
