--- a/rpi-drop/html/reaver.html
+++ b/rpi-drop/html/reaver.html
@@ -77,7 +77,7 @@
 </script>
 
 <!-- ====================================================================== -->
-<div class="row-box">
+<div class="row-box" id="reaver-params-row">
 
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
@@ -97,11 +97,11 @@
 </div>
 
 <!-- ====================================================================== -->
-<div class="row-box-closed">
+<div class="row-box" id="reaver-console-row">
 
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
-        output
+        console
     </div>
 
     <div id="page-output-terminal"> #/output </div>
