--- a/rpi-drop/html/wash.html
+++ b/rpi-drop/html/wash.html
@@ -49,7 +49,8 @@
 
 </script>
 
-<div class="row-box">
+<!-- ====================================================================== -->
+<div class="row-box-closed" id="wash-row">
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
         wash init
@@ -61,7 +62,7 @@
 </div>
 
 <!-- ====================================================================== -->
-<div class="row-box-closed">
+<div class="row-box-closed" id="wash-console-row">
 
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
@@ -75,5 +76,6 @@
 
 </div>
 
+<!-- ====================================================================== -->
 
 
