--- a/rpi-drop/html/wps-db.html
+++ b/rpi-drop/html/wps-db.html
@@ -73,7 +73,7 @@
 </script>
 
 <!-- ====================================================================== -->
-<div class="row-box">
+<div class="row-box" id="wps-row">
 
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
@@ -98,7 +98,7 @@
 </div>
 
 <!-- ====================================================================== -->
-<div class="row-box-closed">
+<div class="row-box-closed" id="wps-console-row">
 
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
