--- a/rpi-drop/html/404.html
+++ b/rpi-drop/html/404.html
@@ -1,8 +1,4 @@
-<!-- ====================================================================== -->
 <script type="text/javascript">
-
-    // ================================================================
-    window.addEventListener('load', function(){ /* */ });
 
     // ================================================================
     function REQ_INDEX( link ) {
@@ -26,31 +22,21 @@
 </script>
 
 <!-- ====================================================================== -->
-<div class="row-box-closed" id="kismet-row">
-    <div class="wide_lable _lblue">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
-        kismet
-    </div>
+<div class="row-box">
 
-    <a class="wide_btn _lgreen" onclick="REQ('/act-ret/')">act</a>
-    <a class="wide_btn _lred" onclick="REQ('/act-ret/')">act</a>
+    <div class="wide_lable _lred">
+        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
+        ERROR - 404    
+    </div>
+    
+    <a class="wide_btn _lred">PAGE NOT FOUND</a>
 
 </div>
 
 <!-- ====================================================================== -->
-<div class="row-box-closed" id="kismet-console-row">
-
-    <div class="wide_lable _lblue">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
-        console
-    </div>
-
-    <div id="page-output-terminal">
-        #/output
-    </div>
-
-    <a class="s_wide_btn _lgreen" onclick="REQ('/act-ret/')">act</a>
-    <a class="s_wide_btn _lred" onclick="REQ('/act-ret/')">act</a>
-
-</div>
-<!-- ====================================================================== -->
+<!--
+<style type="text/css">
+    content-footer{ display: none !important; }
+    content-wrapper{ border-bottom: none !important; }
+</style>
+-->
