--- a/rpi-drop/html/index.html
+++ b/rpi-drop/html/index.html
@@ -22,10 +22,10 @@
 </script>
 
 <!-- ====================================================================== -->
-<div class="row-box">
+<div class="row-box-closed" id="index-wireless-row">
 
     <div class="wide_lable _lred">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
+        <div class="hide_unhide" onclick="hide_unhide( this )">+</div>
         WIRELESS
     </div>
 
@@ -38,7 +38,7 @@
 </div>
 
 <!-- ====================================================================== -->
-<div class="row-box-closed">
+<div class="row-box-closed" id="index-system-row">
 
     <div class="wide_lable _lgreen">
         <div class="hide_unhide" onclick="hide_unhide( this )">+</div>
@@ -52,7 +52,7 @@
 </div>
 
 <!-- ====================================================================== -->
-<div class="row-box-closed">
+<div class="row-box-closed" id="index-settings-row">
 
     <div class="wide_lable _lblue">
         <div class="hide_unhide" onclick="hide_unhide( this )">+</div>
@@ -66,9 +66,9 @@
 
 
 <!-- ====================================================================== -->
-<div class="row-box-closed">
+<div class="row-box-closed" id="index-console-row">
 
-    <div class="wide_lable _lblue">
+    <div class="wide_lable _lred">
         <div class="hide_unhide" onclick="hide_unhide( this )">+</div>
         console
     </div>
