--- a/rpi-drop/html/404.html
+++ b/rpi-drop/html/404.html
@@ -25,7 +25,7 @@
 <div class="row-box">
 
     <div class="wide_lable _lred">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         ERROR - 404    
     </div>
     
