--- a/rpi-drop/html/index.html
+++ b/rpi-drop/html/index.html
@@ -25,7 +25,7 @@
 <div class="row-box-closed" id="index-wireless-row">
 
     <div class="wide_lable _lred">
-        <div class="hide_unhide" onclick="hide_unhide( this )">+</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         WIRELESS
     </div>
 
@@ -41,13 +41,13 @@
 <div class="row-box-closed" id="index-system-row">
 
     <div class="wide_lable _lgreen">
-        <div class="hide_unhide" onclick="hide_unhide( this )">+</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         SYSTEM
     </div>
 
     <a class="s_wide_btn _lblue" href="/terminal">terminal</a>
-    <a class="s_wide_btn _lblue" href="/act/reboot_">reboot</a>
-    <a class="s_wide_btn _lblue" href="/act/halt_">halt</a>
+    <a class="s_wide_btn _lblue" href="/act/reboot">reboot</a>
+    <a class="s_wide_btn _lblue" href="/act/halt">halt</a>
 
 </div>
 
@@ -55,7 +55,7 @@
 <div class="row-box-closed" id="index-settings-row">
 
     <div class="wide_lable _lblue">
-        <div class="hide_unhide" onclick="hide_unhide( this )">+</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         settings
     </div>
 
@@ -69,7 +69,7 @@
 <div class="row-box-closed" id="index-console-row">
 
     <div class="wide_lable _lred">
-        <div class="hide_unhide" onclick="hide_unhide( this )">+</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         console
     </div>
 
