--- a/rpi-drop/html/kismet.html
+++ b/rpi-drop/html/kismet.html
@@ -28,7 +28,7 @@
 <!-- ====================================================================== -->
 <div class="row-box-closed" id="kismet-row">
     <div class="wide_lable _lblue">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         kismet
     </div>
 
@@ -41,7 +41,7 @@
 <div class="row-box-closed" id="kismet-console-row">
 
     <div class="wide_lable _lblue">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         console
     </div>
 
@@ -53,4 +53,9 @@
     <a class="s_wide_btn _lred" onclick="REQ('/act-ret/')">act</a>
 
 </div>
+
 <!-- ====================================================================== -->
+<style type="text/css">
+    content-footer{ display: none !important; }
+    content-wrapper{ border-bottom: none !important; }
+</style>
