--- a/rpi-drop/html/reaver.html
+++ b/rpi-drop/html/reaver.html
@@ -80,7 +80,7 @@
 <div class="row-box" id="reaver-params-row">
 
     <div class="wide_lable _lblue">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         params
     </div>
 
@@ -100,7 +100,7 @@
 <div class="row-box" id="reaver-console-row">
 
     <div class="wide_lable _lblue">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         console
     </div>
 
@@ -112,5 +112,10 @@
 
 </div>
 
+<!-- ====================================================================== -->
+<style type="text/css">
+    content-footer{ display: none !important; }
+    content-wrapper{ border-bottom: none !important; }
+</style>
 
 
