--- a/rpi-drop/html/terminal.html
+++ b/rpi-drop/html/terminal.html
@@ -211,7 +211,7 @@
         <!--
         <button class="t_ksp" style="width: 60px; color: #000; text-shadow: 0 0 2px #fff;" onclick="ctrl_c()">^C</button>
         -->
-        <button class="t_k" style="width: 40px;">%</button><button class="t_k" style="width: 40px;">@</button><button class="t_k" style="width: 40px;">|</button><button class="t_k t_space_">[......]</button><button class="t_ksp" style="width: 50px; color: #0F0; text-shadow: 0 0 2px #000; " onclick="enter()">&gt;</button>
+        <button class="t_k" style="width: 40px;">%</button><button class="t_k" style="width: 40px;">*</button><button class="t_k" style="width: 40px;">|</button><button class="t_k t_space_">[......]</button><button class="t_ksp" style="width: 50px; color: #0F0; text-shadow: 0 0 2px #000; " onclick="enter()">&gt;</button>
         <!--
         <button class="t_ksp" style="width: 60px; color: #0F0; text-shadow: 0 0 2px #000; font-size: 40px;">↩</button>
         <button class="t_ksp" style="width: 60px; color: #0F0; text-shadow: 0 0 2px #000; font-size: 40px;">↵</button>
