--- a/rpi-drop/html/wps-db.html
+++ b/rpi-drop/html/wps-db.html
@@ -76,7 +76,7 @@
 <div class="row-box" id="wps-row">
 
     <div class="wide_lable _lblue">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         search
     </div>
 
@@ -101,7 +101,7 @@
 <div class="row-box-closed" id="wps-console-row">
 
     <div class="wide_lable _lblue">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         output
     </div>
 
@@ -115,4 +115,8 @@
 
 </div>
 
-
+<!-- ====================================================================== -->
+<style type="text/css">
+    content-footer{ display: none !important; }
+    content-wrapper{ border-bottom: none !important; }
+</style>
