--- a/rpi-drop/html/settings.html
+++ b/rpi-drop/html/settings.html
@@ -29,7 +29,7 @@
 <div class="row-box">
 
     <div class="wide_lable _lblue">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         settings
     </div>
 
@@ -42,7 +42,7 @@
 <div class="row-box-closed">
 
     <div class="wide_lable _lblue">
-        <div class="hide_unhide" onclick="hide_unhide( this )">-</div>
+        <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
         output
     </div>
 
@@ -53,3 +53,9 @@
     <a class="wide_btn_center _lblue">blue</a>
 
 </div>
+
+<!-- ====================================================================== -->
+<style type="text/css">
+    content-footer{ display: none !important; }
+    content-wrapper{ border-bottom: none !important; }
+</style>
