--- a/rpi-drop/html/settings.html
+++ b/rpi-drop/html/settings.html
@@ -5,7 +5,9 @@
     window.addEventListener('load', function(){ /* */ });
 
     // ================================================================
-    function REQ_INDEX( link ) {
+    function _clear(){ _byId('page-output-terminal').innerHTML = ''; }
+
+    function REQ( link ) {
 
         // --------------------------------------------------------
         var _AJAX_ = getXmlHttp();
@@ -26,20 +28,19 @@
 </script>
 
 <!-- ====================================================================== -->
-<div class="row-box">
+<div class="row-box-closed" id="settings-row">
 
-    <div class="wide_lable _lblue">
+    <div class="wide_lable _lred">
         <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
-        settings
+        SETTINGS
     </div>
-
-    <a class="wide_btn _lgreen" onclick="REQ('/act-ret/')">act</a>
-    <a class="wide_btn _lred" onclick="REQ('/act-ret/')">act</a>
+    <a class="s_wide_btn _lblue" href="/act-ret">act-ret</a>
+    <a class="s_wide_btn _lgreen" href="/act-ret">act-ret</a>
 
 </div>
 
 <!-- ====================================================================== -->
-<div class="row-box-closed">
+<div class="row-box-closed" id="settings-console-row">
 
     <div class="wide_lable _lblue">
         <div class="hide_unhide  line_icon_set set_36px" onclick="hide_unhide( this )"></div>
@@ -48,9 +49,7 @@
 
     <div id="page-output-terminal"> #/output </div>
 
-    <a class="wide_btn _lblue" onclick="_clear()">clear</a>
-    <a class="wide_btn_center _lgreen">green</a>
-    <a class="wide_btn_center _lblue">blue</a>
+    <a class="wide_btn_center _lred" onclick="_clear()">clear</a>
 
 </div>
 
